@@ -32,8 +32,9 @@ import org.geotools.data.DefaultQuery;
 import org.geotools.data.FeatureSource;
 import org.geotools.data.complex.config.AppSchemaDataAccessConfigurator;
 import org.geotools.data.complex.config.AppSchemaDataAccessDTO;
-import org.geotools.data.complex.config.Types;
 import org.geotools.data.complex.config.XMLConfigDigester;
+import org.geotools.data.complex.feature.type.Types;
+import org.geotools.data.complex.feature.type.UniqueNameFeatureTypeFactoryImpl;
 import org.geotools.data.memory.MemoryDataStore;
 import org.geotools.factory.CommonFactoryFinder;
 import org.geotools.feature.FeatureCollection;
@@ -41,7 +42,6 @@ import org.geotools.feature.FeatureIterator;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
-import org.geotools.feature.type.UniqueNameFeatureTypeFactoryImpl;
 import org.geotools.geometry.jts.ReferencedEnvelope;
 import org.geotools.referencing.crs.DefaultGeographicCRS;
 import org.geotools.test.AppSchemaTestSupport;
@@ -68,14 +68,12 @@ import org.xml.sax.helpers.NamespaceSupport;
 /**
  * @author Gabriel Roldan (Axios Engineering)
  * @version $Id$
- * @source $URL$
  * @since 2.4
  */
 public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
 
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger(
-                    AppSchemaDataAccessTest.class.getPackage().getName());
+            org.geotools.util.logging.Logging.getLogger(AppSchemaDataAccessTest.class);
 
     Name targetName;
 
@@ -258,7 +256,7 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
         Filter filterParameter = ff.equals(property, literal);
 
         property = ff.property("sample/measurement[1]/value");
-        literal = ff.literal(new Integer(3));
+        literal = ff.literal(Integer.valueOf(3));
         Filter filterValue = ff.equals(property, literal);
 
         Filter filter = ff.and(filterParameter, filterValue);
@@ -269,7 +267,7 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
         FeatureIterator<Feature> reader = features.features();
 
         PropertyIsEqualTo equivalentSourceFilter =
-                ff.equals(ff.property("ph"), ff.literal(new Integer(3)));
+                ff.equals(ff.property("ph"), ff.literal(Integer.valueOf(3)));
         FeatureCollection<?, ?> collection =
                 mapping.getSource().getFeatures(equivalentSourceFilter);
 
@@ -277,7 +275,8 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
         int expectedCount = collection.size();
 
         Filter badFilter =
-                ff.greater(ff.property("sample/measurement[1]/value"), ff.literal(new Integer(3)));
+                ff.greater(
+                        ff.property("sample/measurement[1]/value"), ff.literal(Integer.valueOf(3)));
 
         while (reader.hasNext()) {
             Feature f = (Feature) reader.next();
@@ -363,7 +362,7 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
                 ++count;
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            java.util.logging.Logger.getGlobal().log(java.util.logging.Level.INFO, "", e);
             throw e;
         } finally {
             features.close();
@@ -384,7 +383,7 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
                 ++count2;
             }
         } catch (Exception e) {
-            e.printStackTrace();
+            java.util.logging.Logger.getGlobal().log(java.util.logging.Level.INFO, "", e);
             throw e;
         } finally {
             features2.close();
@@ -434,8 +433,8 @@ public class AppSchemaDataAccessTest extends AppSchemaTestSupport {
             String fid = type.getName().getLocalPart() + "." + i;
 
             fbuilder.add("watersample." + i);
-            fbuilder.add(new Integer(i));
-            fbuilder.add(new Integer(10 + i));
+            fbuilder.add(Integer.valueOf(i));
+            fbuilder.add(Integer.valueOf(10 + i));
             fbuilder.add(new Float(i));
 
             SimpleFeature f = fbuilder.buildFeature(fid);
