@@ -21,7 +21,6 @@ import javax.xml.namespace.QName;
 import org.geotools.xs.TestSchema;
 import org.geotools.xs.XS;
 
-/** @source $URL$ */
 public class XSNonNegativeIntegerStrategyTest extends TestSchema {
     public void validateValues(String text, Number expected) throws Exception {
         Object value = new BigInteger(text.trim());
@@ -65,7 +64,7 @@ public class XSNonNegativeIntegerStrategyTest extends TestSchema {
     }
 
     public void testPositiveNumber() throws Exception {
-        validateValues("1000", new Integer("1000"));
+        validateValues("1000", Integer.valueOf("1000"));
     }
 
     protected QName getQName() {
