@@ -57,7 +57,6 @@ import org.opengis.style.GraphicalSymbol;
 import org.opengis.style.OverlapBehavior;
 import org.opengis.style.Rule;
 
-/** @source $URL$ */
 public class SEExampleTest extends SETestSupport {
 
     SimpleFeature f1;
@@ -272,7 +271,7 @@ public class SEExampleTest extends SETestSupport {
 
         Stroke s = sym.getStroke();
         assertEquals(255, s.getColor().evaluate(null, Color.class).getBlue());
-        assertEquals(new Integer(2), s.getWidth().evaluate(null, Integer.class));
+        assertEquals(Integer.valueOf(2), s.getWidth().evaluate(null, Integer.class));
     }
 
     public void testParsePolygonSymbolizer() throws Exception {
@@ -331,7 +330,7 @@ public class SEExampleTest extends SETestSupport {
         assertEquals(Color.BLACK, fill.getColor().evaluate(null, Color.class));
 
         FilterFactory2 ff = CommonFactoryFinder.getFilterFactory2();
-        System.out.println(sym.getPriority());
+        // System.out.println(sym.getPriority());
         assertEquals(ff.property("people"), sym.getPriority());
 
         Map<String, String> options = sym.getOptions();
