@@ -38,12 +38,7 @@ import it.geosolutions.jaiext.stats.Statistics;
 import it.geosolutions.jaiext.stats.Statistics.StatsType;
 import it.geosolutions.jaiext.utilities.ImageLayout2;
 import it.geosolutions.jaiext.vectorbin.ROIGeometry;
-import java.awt.Color;
-import java.awt.HeadlessException;
-import java.awt.Image;
-import java.awt.Rectangle;
-import java.awt.RenderingHints;
-import java.awt.Transparency;
+import java.awt.*;
 import java.awt.color.ColorSpace;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.NoninvertibleTransformException;
@@ -117,17 +112,17 @@ import javax.media.jai.operator.MultiplyConstDescriptor;
 import javax.media.jai.operator.SubtractDescriptor;
 import javax.media.jai.operator.XorConstDescriptor;
 import javax.media.jai.registry.RenderedRegistryMode;
-import org.geotools.factory.Hints;
 import org.geotools.geometry.jts.JTS;
 import org.geotools.geometry.jts.LiteCoordinateSequence;
 import org.geotools.image.io.ImageIOExt;
+import org.geotools.image.util.ColorUtilities;
+import org.geotools.image.util.ImageUtilities;
+import org.geotools.metadata.i18n.ErrorKeys;
+import org.geotools.metadata.i18n.Errors;
 import org.geotools.referencing.ReferencingFactoryFinder;
 import org.geotools.referencing.operation.transform.WarpBuilder;
-import org.geotools.resources.Arguments;
-import org.geotools.resources.i18n.ErrorKeys;
-import org.geotools.resources.i18n.Errors;
-import org.geotools.resources.image.ColorUtilities;
-import org.geotools.resources.image.ImageUtilities;
+import org.geotools.util.Arguments;
+import org.geotools.util.factory.Hints;
 import org.geotools.util.logging.Logging;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -146,13 +141,37 @@ import org.opengis.referencing.operation.MathTransformFactory;
  * an undetermined state and should not be used anymore.
  *
  * @since 2.3
- * @source $URL$
  * @version $Id$
  * @author Simone Giannecchini
  * @author Bryce Nordgren
  * @author Martin Desruisseaux
  */
 public class ImageWorker {
+
+    static final Integer ONE = 1;
+
+    /** Byte identity lookup table for indexed color models */
+    private static final byte[][] IDENTITY_BYTE;
+    /** Short identity lookup table for indexed color models */
+    private static final short[][] IDENTITY_SHORT;
+
+    static {
+        final byte[][] data = new byte[1][256];
+        for (int i = 0; i < 256; i++) {
+            data[0][i] = (byte) (0xFF & i);
+        }
+
+        IDENTITY_BYTE = data;
+    }
+
+    static {
+        final short[][] data = new short[1][65535];
+        for (int i = 0; i < 65535; i++) {
+            data[0][i] = (short) (0xFFFF & i);
+        }
+        IDENTITY_SHORT = data;
+    }
+
     private static final double[] ROI_BACKGROUND = new double[] {0};
 
     private static final double[][] ROI_THRESHOLDS = new double[][] {{1.0}};
@@ -180,14 +199,14 @@ public class ImageWorker {
     }
 
     /** The logger to use for this class. */
-    private static final Logger LOGGER = Logging.getLogger("org.geotools.image");
+    private static final Logger LOGGER = Logging.getLogger(ImageWorker.class);
 
     /** CODEC_LIB_AVAILABLE */
     private static final boolean CODEC_LIB_AVAILABLE = PackageUtil.isCodecLibAvailable();
 
     /** Registration of the JAI-EXT operations */
     static {
-        JAIEXT_ENABLED = Boolean.getBoolean(JAIEXT_ENABLED_KEY);
+        JAIEXT_ENABLED = Boolean.valueOf(System.getProperty(JAIEXT_ENABLED_KEY, "true"));
         JAIExt.initJAIEXT(JAIEXT_ENABLED);
         USE_JAI_SCALE2 = Boolean.getBoolean(USE_JAI_SCALE2_KEY) && JAIEXT_ENABLED;
         SCALE_OP_NAME = USE_JAI_SCALE2 ? SCALE2_NAME : SCALE_NAME;
@@ -358,7 +377,7 @@ public class ImageWorker {
     static {
         ALPHA_LUT = new byte[256];
         for (int i = 1; i < 256; i++) {
-            ALPHA_LUT[i] = (byte) (255 & 0xFF);
+            ALPHA_LUT[i] = (byte) 255;
         }
     }
 
@@ -438,6 +457,12 @@ public class ImageWorker {
      */
     private int tileCacheDisabled = 0;
 
+    /** Subsampling factor for the x axis, used in statistical operations (extrema and histogram) */
+    private int xPeriod = ONE;
+
+    /** Subsampling factor for the y axis, used in statistical operations (extrema and histogram) */
+    private int yPeriod = ONE;
+
     /**
      * Creates a new uninitialized builder for an {@linkplain #load image read} or a {@linkplain
      * #mosaic mosaic operation}
@@ -478,6 +503,44 @@ public class ImageWorker {
      */
     public ImageWorker(final RenderedImage image) {
         setImage(image);
+    }
+
+    /**
+     * The x-period used by statistical operations (e.g. extrema, mean, histogram). Defaults to 1.
+     *
+     * @return
+     */
+    public int getXPeriod() {
+        return xPeriod;
+    }
+
+    /**
+     * Sets the x-period used by statistical operations (e.g. extrema, mean, histogram). E.g.,
+     * setting it to 2 wil make the statistical operations read one pixel and skip one pixel, and so
+     * on.
+     */
+    public ImageWorker setXPeriod(int xPeriod) {
+        this.xPeriod = xPeriod;
+        return this;
+    }
+
+    /**
+     * The y-period used by statistical operations (e.g. extrema, mean, histogram). Defaults to 1.
+     *
+     * @return
+     */
+    public int getYPeriod() {
+        return yPeriod;
+    }
+
+    /**
+     * Sets the x-period used by statistical operations (e.g. extrema, mean, histogram). E.g.,
+     * setting it to 2 wil make the statistical operations read one pixel and skip one pixel, and so
+     * on.
+     */
+    public ImageWorker setYPeriod(int yPeriod) {
+        this.yPeriod = yPeriod;
+        return this;
     }
 
     public Range extractNoDataProperty(final RenderedImage image) {
@@ -521,7 +584,7 @@ public class ImageWorker {
      *
      * @param source Filename of the source image to read.
      * @param imageChoice Image index in multipage images.
-     * @param readMatadata If {@code true}, metadata will be read.
+     * @param readMetadata If {@code true}, metadata will be read.
      */
     public final void load(final String source, final int imageChoice, final boolean readMetadata) {
         final ParameterBlockJAI pbj = new ParameterBlockJAI("ImageRead");
@@ -745,7 +808,9 @@ public class ImageWorker {
             PlanarImage img = getPlanarImage();
             Object property = img.getProperty(NoDataContainer.GC_NODATA);
             if (property != null && property != Image.UndefinedProperty) {
-                img.removeProperty(NoDataContainer.GC_NODATA);
+                // this kind of property cannot be unset, but it's possible to set it to
+                // an invalid value
+                img.setProperty(NoDataContainer.GC_NODATA, new Object());
                 image = img;
             }
         }
@@ -1021,7 +1086,6 @@ public class ImageWorker {
     private double[][] getExtremas() {
         Object extrema = getComputedProperty(EXTREMA);
         if (!(extrema instanceof double[][])) {
-            final Integer ONE = 1;
             // Create the parameterBlock
             ParameterBlock pb = new ParameterBlock();
             pb.setSource(image, 0);
@@ -1035,8 +1099,8 @@ public class ImageWorker {
                 }
 
                 // Image parameters
-                pb.set(ONE, 0); // xPeriod
-                pb.set(ONE, 1); // yPeriod
+                pb.set(xPeriod, 0); // xPeriod
+                pb.set(yPeriod, 1); // yPeriod
                 pb.set(roi, 2); // ROI
                 pb.set(nodata, 3); // NoData
                 pb.set(bands, 5); // band indexes
@@ -1061,8 +1125,8 @@ public class ImageWorker {
                 }
             } else {
                 pb.set(roi, 0); // The region of the image to scan. Default to all.
-                pb.set(ONE, 1); // The horizontal sampling rate. Default to 1.
-                pb.set(ONE, 2); // The vertical sampling rate. Default to 1.
+                pb.set(xPeriod, 1); // The horizontal sampling rate. Default to 1.
+                pb.set(yPeriod, 2); // The vertical sampling rate. Default to 1.
                 pb.set(ONE, 4); // Maximum number of run length codes to store. Default to 1.
                 image = JAI.create("Extrema", pb, getRenderingHints());
             }
@@ -1075,7 +1139,6 @@ public class ImageWorker {
     public Histogram getHistogram(int[] numBins, double[] lowValues, double[] highValues) {
         Object histogram = getComputedProperty(HISTOGRAM);
         if (!(histogram instanceof Histogram)) {
-            final Integer ONE = 1;
             // Create the parameterBlock
             ParameterBlock pb = new ParameterBlock();
             pb.setSource(image, 0);
@@ -1089,8 +1152,8 @@ public class ImageWorker {
                 }
 
                 // Image parameters
-                pb.set(ONE, 0); // xPeriod
-                pb.set(ONE, 1); // yPeriod
+                pb.set(xPeriod, 0); // xPeriod
+                pb.set(yPeriod, 1); // yPeriod
                 pb.set(roi, 2); // ROI
                 pb.set(nodata, 3); // NoData
                 pb.set(bands, 5); // band indexes
@@ -1135,8 +1198,8 @@ public class ImageWorker {
                 }
             } else {
                 pb.set(roi, 0); // The region of the image to scan. Default to all.
-                pb.set(ONE, 1); // The horizontal sampling rate. Default to 1.
-                pb.set(ONE, 2); // The vertical sampling rate. Default to 1.
+                pb.set(xPeriod, 1); // The horizontal sampling rate. Default to 1.
+                pb.set(yPeriod, 2); // The vertical sampling rate. Default to 1.
                 pb.set(numBins, 3); // Bin number.
                 pb.set(lowValues, 4); // Lower values per band.
                 pb.set(highValues, 5); // Higher values per band.
@@ -1154,7 +1217,6 @@ public class ImageWorker {
     public double[] getMean() {
         Object mean = getComputedProperty(MEAN);
         if (!(mean instanceof double[])) {
-            final Integer ONE = 1;
             // Create the parameterBlock
             ParameterBlock pb = new ParameterBlock();
             pb.setSource(image, 0);
@@ -1168,8 +1230,8 @@ public class ImageWorker {
                 }
 
                 // Image parameters
-                pb.set(ONE, 0); // xPeriod
-                pb.set(ONE, 1); // yPeriod
+                pb.set(xPeriod, 0); // xPeriod
+                pb.set(yPeriod, 1); // yPeriod
                 pb.set(roi, 2); // ROI
                 pb.set(nodata, 3); // NoData
                 pb.set(bands, 5); // band indexes
@@ -1192,8 +1254,8 @@ public class ImageWorker {
                 }
             } else {
                 pb.set(roi, 0); // The region of the image to scan. Default to all.
-                pb.set(ONE, 1); // The horizontal sampling rate. Default to 1.
-                pb.set(ONE, 2); // The vertical sampling rate. Default to 1.
+                pb.set(xPeriod, 1); // The horizontal sampling rate. Default to 1.
+                pb.set(yPeriod, 2); // The vertical sampling rate. Default to 1.
                 image = JAI.create("Mean", pb, getRenderingHints());
             }
             mean = getComputedProperty(MEAN);
@@ -1750,20 +1812,26 @@ public class ImageWorker {
      * Reformats the {@linkplain ColorModel color model} to a {@linkplain ComponentColorModel
      * component color model} preserving transparency. This is used especially in order to go from
      * {@link PackedColorModel} to {@link ComponentColorModel}, which seems to be well accepted from
-     * {@code PNGEncoder} and {@code TIFFEncoder}.
+     * {@code PNGEncoder} and {@code TIFFEncoder}. The omitAlphaOnExpand param allows to explicity
+     * avoid producing an alpha band when expanding an {@link IndexColorModel} to {@link
+     * ComponentColorModel}. This may be useful when preparing an Image for JPEG encoding which do
+     * not support alpha band, avoiding the need of a BandSelect right after the color expansion.
+     * Note that this flag has only effect when expanding from {@link IndexColorModel} so alpha is
+     * preserved if input colorModel is already a ComponentColorModel.
      *
      * <p>This code is adapted from jai-interests mailing list archive.
      *
      * @param checkTransparent
      * @param optimizeGray
+     * @param omitAlphaOnExpand
      * @return this {@link ImageWorker}.
      * @see FormatDescriptor
      */
     public final ImageWorker forceComponentColorModel(
-            boolean checkTransparent, boolean optimizeGray) {
+            boolean checkTransparent, boolean optimizeGray, boolean omitAlphaOnExpand) {
         final ColorModel cm = image.getColorModel();
         if (cm instanceof ComponentColorModel) {
-            // Already an component color model - nothing to do.
+            // Already a component color model - nothing to do.
             return this;
         }
         // shortcut for index color model
@@ -1771,8 +1839,12 @@ public class ImageWorker {
             final IndexColorModel icm = (IndexColorModel) cm;
             final SampleModel sm = this.image.getSampleModel();
             final int datatype = sm.getDataType();
-            final boolean gray = ColorUtilities.isGrayPalette(icm, checkTransparent) & optimizeGray;
-            final boolean alpha = icm.hasAlpha();
+            Range noData = getNoData();
+            final boolean gray =
+                    ColorUtilities.isGrayPalette(icm, checkTransparent)
+                            && optimizeGray
+                            && noData == null;
+            final boolean alpha = (icm.hasAlpha() || noData != null) && !omitAlphaOnExpand;
             /*
              * If the image is grayscale, retain only the needed bands.
              */
@@ -1816,6 +1888,19 @@ public class ImageWorker {
                                 }
                                 if (numDestinationBands == 4) {
                                     data[3][i] = a;
+                                }
+                            }
+                        }
+                        if (noData != null
+                                && (numDestinationBands == 2 || numDestinationBands == 4)) {
+                            int noDataValue = noData.getMin().intValue();
+                            for (int i = 0; i < 256; i++) {
+                                if (i == noDataValue) {
+                                    if (numDestinationBands == 2 && gray) {
+                                        data[1][i] = 0;
+                                    } else if (numDestinationBands == 4) {
+                                        data[3][i] = 0;
+                                    }
                                 }
                             }
                         }
@@ -1919,6 +2004,64 @@ public class ImageWorker {
     }
 
     /**
+     * If the image has an indexed color model, removes it, and replaces it with a component color
+     * model. can be useful before a band-merge if the image in question is not meant to be color
+     * expanded.
+     *
+     * @return
+     */
+    public final ImageWorker removeIndexColorModel() {
+        if (image.getColorModel() instanceof IndexColorModel) {
+            LookupTable lut = null;
+            SampleModel sampleModel = image.getSampleModel();
+            int dataType = sampleModel.getDataType();
+            switch (dataType) {
+                case DataBuffer.TYPE_BYTE:
+                    lut = LookupTableFactory.create(IDENTITY_BYTE);
+                    break;
+
+                case DataBuffer.TYPE_USHORT:
+                    boolean unsigned = dataType == DataBuffer.TYPE_SHORT;
+                    lut = LookupTableFactory.create(IDENTITY_SHORT, unsigned);
+                    break;
+
+                default:
+                    throw new IllegalArgumentException(
+                            Errors.format(ErrorKeys.ILLEGAL_ARGUMENT_$2, "datatype", dataType));
+            }
+
+            // prepare color model and sample model
+            final ComponentColorModel destinationColorModel =
+                    new ComponentColorModel(
+                            ColorSpace.getInstance(ColorSpace.CS_GRAY),
+                            false,
+                            false,
+                            Transparency.OPAQUE,
+                            dataType);
+            final SampleModel destinationSampleModel =
+                    destinationColorModel.createCompatibleSampleModel(
+                            sampleModel.getWidth(), sampleModel.getHeight());
+            ImageLayout layout = new ImageLayout(image);
+            layout.setColorModel(destinationColorModel);
+            layout.setSampleModel(destinationSampleModel);
+
+            // perform the lookup
+            final RenderingHints oldRi = this.getRenderingHints();
+            final RenderingHints newRi = (RenderingHints) oldRi.clone();
+            newRi.add(new RenderingHints(JAI.KEY_IMAGE_LAYOUT, layout));
+            try {
+                setRenderingHints(newRi);
+                lookup(lut);
+            } finally {
+                // restore RI
+                this.setRenderingHints(oldRi);
+            }
+        }
+
+        return this;
+    }
+
+    /**
      * Reformats the {@linkplain ColorModel color model} to a {@linkplain ComponentColorModel
      * component color model} preserving transparency. This is used especially in order to go from
      * {@link PackedColorModel} to {@link ComponentColorModel}, which seems to be well accepted from
@@ -1933,6 +2076,24 @@ public class ImageWorker {
      */
     public final ImageWorker forceComponentColorModel(boolean checkTransparent) {
         return forceComponentColorModel(checkTransparent, true);
+    }
+
+    /**
+     * Reformats the {@linkplain ColorModel color model} to a {@linkplain ComponentColorModel
+     * component color model} preserving transparency. This is used especially in order to go from
+     * {@link PackedColorModel} to {@link ComponentColorModel}, which seems to be well accepted from
+     * {@code PNGEncoder} and {@code TIFFEncoder}.
+     *
+     * <p>This code is adapted from jai-interests mailing list archive.
+     *
+     * @param checkTransparent tells this method to not consider fully transparent pixels when
+     *     optimizing grayscale palettes.
+     * @return this {@link ImageWorker}.
+     * @see FormatDescriptor
+     */
+    public final ImageWorker forceComponentColorModel(
+            boolean checkTransparent, boolean optimizeGray) {
+        return forceComponentColorModel(checkTransparent, optimizeGray, false);
     }
 
     /**
@@ -2010,7 +2171,6 @@ public class ImageWorker {
                     isJaiExtEnabled()
                             ? IHSColorSpaceJAIExt.getInstance()
                             : IHSColorSpace.getInstance();
-            ;
             final int numBits = image.getColorModel().getComponentSize(0);
             final ColorModel ihsColorModel =
                     new ComponentColorModel(
@@ -2155,9 +2315,7 @@ public class ImageWorker {
     /**
      * Perform a BandMerge operation between the underlying image and the provided one.
      *
-     * @param image to merge with the underlying one.
-     * @param before <code>true</code> if we want to use first the provided image, <code>false
-     *     </code> otherwise.
+     * @param bands to merge with the underlying one.
      * @param addAlpha <code>true</code> if we want to set the last image as alpha, <code>false
      *     </code> otherwise.
      * @return this {@link ImageWorker}.
@@ -2169,9 +2327,7 @@ public class ImageWorker {
     /**
      * Perform a BandMerge operation between the underlying image and the provided one.
      *
-     * @param image to merge with the underlying one.
-     * @param before <code>true</code> if we want to use first the provided image, <code>false
-     *     </code> otherwise.
+     * @param bands images to merge with the underlying one.
      * @param addAlpha <code>true</code> if we want to set the last image as alpha, <code>false
      *     </code> otherwise.
      * @param transformationList List of AffineTransformation that can be applied to the input
@@ -3368,7 +3524,7 @@ public class ImageWorker {
                         ConstantDescriptor.create(
                                 (float) image.getWidth(),
                                 (float) image.getHeight(),
-                                new Byte[] {new Byte(alpha)},
+                                new Byte[] {Byte.valueOf(alpha)},
                                 new RenderingHints(JAI.KEY_IMAGE_LAYOUT, layout));
 
                 ParameterBlock pb = new ParameterBlock();
@@ -3487,12 +3643,11 @@ public class ImageWorker {
      * @param compressionRate percentage of compression.
      * @param nativeAcc should we use native acceleration.
      * @param paletted should we write the png as 8 bits?
-     * @return this {@link ImageWorker}.
      * @throws IOException In case an error occurs during the search for an {@link
      *     ImageOutputStream} or during the eoncding process.
-     * @todo Current code doesn't check if the writer already accepts the provided destination. It
-     *     wraps it in a {@link ImageOutputStream} inconditionnaly.
      */
+    // Current code doesn't check if the writer already accepts the provided destination. It
+    // wraps it in a ImageOutputStream inconditionnaly.
     public final void writePNG(
             final Object destination,
             final String compression,
@@ -3742,7 +3897,6 @@ public class ImageWorker {
      * @param compression algorithm.
      * @param compressionRate percentage of compression.
      * @param nativeAcc should we use native acceleration.
-     * @return this {@link ImageWorker}.
      * @throws IOException In case an error occurs during the search for an {@link
      *     ImageOutputStream} or during the eoncding process.
      */
@@ -3870,10 +4024,8 @@ public class ImageWorker {
      * @param destination where to write the internal {@link #image} as a TIFF.
      * @param compression algorithm.
      * @param compressionRate percentage of compression.
-     * @param nativeAcc should we use native acceleration.
      * @param tileSizeX tile size x direction (or -1 if tiling is not desired)
      * @param tileSizeY tile size y direction (or -1 if tiling is not desired)
-     * @return this {@link ImageWorker}.
      * @throws IOException In case an error occurs during the search for an {@link
      *     ImageOutputStream} or during the eoncding process.
      */
@@ -4256,7 +4408,7 @@ public class ImageWorker {
                         try {
                             AffineTransform inverse = sTx.createInverse();
                             ROI newROI = this.roi != null ? this.roi.transform(inverse) : null;
-                            this.roi = newROI.intersect(r);
+                            this.roi = newROI != null ? newROI.intersect(r) : null;
                         } catch (NoninvertibleTransformException e) {
                             LOGGER.log(Level.SEVERE, e.getMessage(), e);
                         }
@@ -4413,6 +4565,30 @@ public class ImageWorker {
                 pb.set((float) scalingParams[i], i);
             }
         }
+        RenderedImage sourceImage = pb.getRenderedSource(0);
+        ColorModel cm = sourceImage.getColorModel();
+        SampleModel sm = sourceImage.getSampleModel();
+        final int numBands = sm.getNumBands();
+        RenderedImage alphaChannel = null;
+
+        // When interpolation is not nearest, Alpha should not be interpolated the same way
+        // as normal bands to avoid partial transparencies
+        if (cm.hasAlpha()
+                && (numBands == 2 || numBands == 4)
+                && (interpolation != null
+                        && (interpolation.getWidth() > 1 || interpolation.getHeight() > 1))) {
+
+            // Extract Alpha for future re-attach
+            ImageWorker noAlpha =
+                    new ImageWorker(sourceImage).setRenderingHints(hints).retainBands(numBands - 1);
+            alphaChannel =
+                    new ImageWorker(sourceImage)
+                            .setRenderingHints(hints)
+                            .retainLastBand()
+                            .getRenderedImage();
+            pb.setSource(noAlpha.getRenderedImage(), 0);
+        }
+
         pb.set(interpolation, 4);
         pb.set(roi, 5);
         pb.set(nodata, 7);
@@ -4421,7 +4597,42 @@ public class ImageWorker {
                 pb.set(background, 8);
             }
         }
-        image = JAI.create(SCALE_OP_NAME, pb, hints);
+        RenderedImage scaledImage = JAI.create(SCALE_OP_NAME, pb, hints);
+        image = scaledImage;
+        if (alphaChannel != null) {
+            // Need to scale alpha separately (with nearest interpolation)
+            // to avoid partial transparency
+            ParameterBlock pb2 = new ParameterBlock();
+            pb2.setSource(alphaChannel, 0);
+            for (int i = 0; i < 4; i++) {
+                if (USE_JAI_SCALE2) {
+                    pb2.set(scalingParams[i], i);
+                } else {
+                    pb2.set((float) scalingParams[i], i);
+                }
+            }
+            pb2.set(Interpolation.getInstance(Interpolation.INTERP_NEAREST), 4);
+            pb2.set(roi, 5);
+            pb2.set(nodata, 7);
+            alphaChannel = JAI.create(SCALE_OP_NAME, pb2, hints);
+
+            // Now, re-attach the scaled alpha to the scaled image
+            ImageWorker merged = new ImageWorker(scaledImage);
+            Object candidate = hints.get(JAI.KEY_IMAGE_LAYOUT);
+            if (candidate instanceof ImageLayout) {
+                ImageLayout layout = (ImageLayout) candidate;
+                ImageLayout layout2 =
+                        new ImageLayout2(
+                                layout.getTileGridXOffset(null),
+                                layout.getTileGridYOffset(null),
+                                layout.getTileWidth(null),
+                                layout.getTileHeight(null),
+                                sm,
+                                cm);
+                merged.setRenderingHints(new RenderingHints(JAI.KEY_IMAGE_LAYOUT, layout2));
+            }
+            image = merged.addBand(alphaChannel, false, true, null).getRenderedImage();
+        }
     }
 
     /**
@@ -4435,15 +4646,27 @@ public class ImageWorker {
         // getting the new ROI property
         if (forceUpdate || roi != null) {
             Object prop = null;
+            RenderedImage localImage = image;
+            // there might be the case that the image comes from a bandMerge
+            // so let's try to extract the ROI from the source image
+            if (localImage instanceof RenderedOp) {
+                String operationName = ((RenderedOp) localImage).getOperationName();
+                if ("BandMerge".equalsIgnoreCase(operationName)) {
+                    Vector<RenderedImage> sources = localImage.getSources();
+                    if (!sources.isEmpty()) {
+                        localImage = sources.get(0);
+                    }
+                }
+            }
             if (opName != null) {
                 // Extract the roi using a property generator
                 PropertyGenerator gen =
                         getOperationDescriptor(opName)
                                 .getPropertyGenerators(RenderedRegistryMode.MODE_NAME)[0];
-                prop = gen.getProperty("roi", image);
+                prop = gen.getProperty("roi", localImage);
             } else {
                 // extract the roi from the image
-                prop = image.getProperty("roi");
+                prop = localImage.getProperty("roi");
             }
             // Actual ROI update
             if (prop != null && prop instanceof ROI) {
@@ -4614,14 +4837,13 @@ public class ImageWorker {
 
         if (background.length == 3) {
             return new Color((int) background[0], (int) background[1], (int) background[2]);
-        } else if (background.length == 4) {
+        } else {
+            // as per initial exit condition, here we can only have background.length == 4
             return new Color(
                     (int) background[0],
                     (int) background[1],
                     (int) background[2],
                     (int) background[3]);
-        } else {
-            return null;
         }
     }
 
@@ -4900,13 +5122,6 @@ public class ImageWorker {
         pb.set(roi, 3);
         pb.set(nodata, 4);
         pb.set(background, 2);
-        if (isNoDataNeeded()) {
-            if (background != null && background.length > 0) {
-                //                // We must set the new NoData value
-                //                setNoData(RangeFactory.create(background[0], background[0]));
-                //                invalidateStatistics();
-            }
-        }
         image = JAI.create("Warp", pb, getRenderingHints());
         updateROI(true, null);
         return this;
@@ -5104,9 +5319,21 @@ public class ImageWorker {
             // background
             if (bgColorIndex == -1) {
                 // we need to expand the image to RGB
-                forceComponentColorModel();
-                addAlphaChannel();
                 bgValues = new double[] {0, 0, 0, 0};
+                if (getNoData() != null) {
+                    ImageWorker delegate = new ImageWorker(getRenderedImage());
+                    delegate.setBackground(bgValues);
+                    delegate.forceComponentColorModel();
+                    setImage(delegate.getRenderedImage());
+                    // nodata has been replaced by transparency
+                    setNoData(null);
+                } else {
+                    forceComponentColorModel();
+                }
+                if (!getRenderedImage().getColorModel().hasAlpha()) {
+                    addAlphaChannel();
+                }
+                image = getRenderedImage();
             } else {
                 // we found the background color in the original image palette therefore we set its
                 // index as the bkg value.
@@ -5493,7 +5720,7 @@ public class ImageWorker {
             } catch (NoSuchMethodException e) {
                 arguments.printSummary(e);
             } catch (Exception e) {
-                e.printStackTrace(arguments.err);
+                java.util.logging.Logger.getGlobal().log(java.util.logging.Level.INFO, "", e);
             }
     }
 }
