@@ -41,8 +41,6 @@ import org.geotools.data.simple.SimpleFeatureIterator;
 import org.geotools.data.simple.SimpleFeatureSource;
 import org.geotools.data.simple.SimpleFeatureStore;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.Hints;
-import org.geotools.feature.IllegalAttributeException;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
 import org.geotools.filter.IllegalFilterException;
 import org.geotools.filter.function.FilterFunction_geometryType;
@@ -51,10 +49,12 @@ import org.geotools.geometry.jts.LiteCoordinateSequence;
 import org.geotools.geometry.jts.LiteCoordinateSequenceFactory;
 import org.geotools.geometry.jts.ReferencedEnvelope;
 import org.geotools.referencing.CRS;
+import org.geotools.util.factory.Hints;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LineString;
 import org.locationtech.jts.geom.Point;
+import org.opengis.feature.IllegalAttributeException;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
 import org.opengis.feature.type.AttributeDescriptor;
@@ -63,7 +63,6 @@ import org.opengis.filter.FilterFactory;
 import org.opengis.filter.PropertyIsEqualTo;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 
-/** @source $URL$ */
 public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
     private static final int LOCK_DURATION = 3600 * 1000; // one hour
     protected TestData td;
@@ -90,7 +89,9 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
             td.build();
         }
 
-        dataStore.setDatabaseSchema(null);
+        if (setup.canResetSchema()) {
+            dataStore.setDatabaseSchema(null);
+        }
     }
 
     protected abstract JDBCDataStoreAPITestSetup createTestSetup();
@@ -101,7 +102,7 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
             assertTrue(contains(names, tname("road")));
             assertTrue(contains(names, tname("river")));
         } catch (IOException e) {
-            e.printStackTrace();
+            java.util.logging.Logger.getGlobal().log(java.util.logging.Level.INFO, "", e);
             fail("An IOException has been thrown!");
         }
     }
@@ -665,7 +666,6 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
      * Test two transactions one removing feature, and one adding a feature.
      *
      * @throws IllegalAttributeException
-     * @throws Exception DOCUMENT ME!
      */
     public void testTransactionIsolation() throws Exception {
         try (Transaction t1 = new DefaultTransaction();
@@ -770,7 +770,7 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
             try (FeatureReader<SimpleFeatureType, SimpleFeature> reader =
                     dataStore.getFeatureReader(new Query(tname("road"), Filter.INCLUDE), t2)) {
                 td.newRoad = findFeature(reader, aname("name"), "r4");
-                System.out.println("newRoad:" + td.newRoad);
+                // System.out.println("newRoad:" + td.newRoad);
                 ADD[ADD.length - 1] = td.newRoad;
                 FINAL[FINAL.length - 1] = td.newRoad;
             }
@@ -987,7 +987,7 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
 
         // FilterFactory factory = FilterFactoryFinder.createFilterFactory();
         // rd1Filter = factory.createFidFilter( roadFeatures[0].getID() );
-        Object changed = new Integer(5);
+        Object changed = Integer.valueOf(5);
         AttributeDescriptor name = td.roadType.getDescriptor(aname("id"));
         road.modifyFeatures(name, changed, td.rd1Filter);
 
@@ -1255,15 +1255,7 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
         return count;
     }
 
-    /**
-     * Ensure readers contents equal those in the feature array
-     *
-     * @param features DOCUMENT ME!
-     * @param reader DOCUMENT ME!
-     * @throws NoSuchElementException DOCUMENT ME!
-     * @throws IOException DOCUMENT ME!
-     * @throws IllegalAttributeException DOCUMENT ME!
-     */
+    /** Ensure readers contents equal those in the feature array */
     void assertCovered(
             SimpleFeature[] features, FeatureReader<SimpleFeatureType, SimpleFeature> reader)
             throws NoSuchElementException, IOException, IllegalAttributeException {
@@ -1422,13 +1414,6 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
     /**
      * Ensure that FeatureReader<SimpleFeatureType, SimpleFeature> reader contains exactly the
      * contents of array.
-     *
-     * @param reader DOCUMENT ME!
-     * @param array DOCUMENT ME!
-     * @return DOCUMENT ME!
-     * @throws NoSuchElementException DOCUMENT ME!
-     * @throws IOException DOCUMENT ME!
-     * @throws IllegalAttributeException DOCUMENT ME!
      */
     boolean covers(FeatureReader<SimpleFeatureType, SimpleFeature> reader, SimpleFeature[] array)
             throws NoSuchElementException, IOException, IllegalAttributeException {
@@ -1474,13 +1459,7 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
         return count == array.length;
     }
 
-    /**
-     * Like contain but based on match rather than equals
-     *
-     * @param array DOCUMENT ME!
-     * @param expected DOCUMENT ME!
-     * @return DOCUMENT ME!
-     */
+    /** Like contain but based on match rather than equals */
     boolean containsLax(SimpleFeature[] array, SimpleFeature expected) {
         if ((array == null) || (array.length == 0)) {
             return false;
@@ -1552,10 +1531,6 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
      * Ensure readers contents match those in the feature array
      *
      * <p>Implemented using match on attribute types, not feature id
-     *
-     * @param array DOCUMENT ME!
-     * @param reader DOCUMENT ME!
-     * @throws Exception DOCUMENT ME!
      */
     void assertMatched(
             SimpleFeature[] array, FeatureReader<SimpleFeatureType, SimpleFeature> reader)
@@ -1592,22 +1567,16 @@ public abstract class JDBCDataStoreAPIOnlineTest extends JDBCTestSupport {
             //            }
         }
 
-        System.out.println("not found:" + feature);
+        // System.out.println("not found:" + feature);
 
         for (int i = 0; i < array.length; i++) {
-            System.out.println(i + ":" + array[i]);
+            // System.out.println(i + ":" + array[i]);
         }
 
         fail("array has no match for " + feature);
     }
 
-    /**
-     * Compare based on attributes not getID allows comparison of Diff contents
-     *
-     * @param expected DOCUMENT ME!
-     * @param actual DOCUMENT ME!
-     * @return DOCUMENT ME!
-     */
+    /** Compare based on attributes not getID allows comparison of Diff contents */
     boolean match(SimpleFeature expected, SimpleFeature actual) {
         SimpleFeatureType type = expected.getFeatureType();
 
