@@ -38,12 +38,11 @@ import org.opengis.filter.expression.Expression;
  * Calculates the minimum value of an attribute for a given FeatureCollection and Expression.
  *
  * @author James
- * @source $URL$
  */
 public class Collection_MinFunction extends FunctionExpressionImpl {
     /** The logger for the filter module. */
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger("org.geotools.filter.function");
+            org.geotools.util.logging.Logging.getLogger(Collection_MinFunction.class);
 
     SimpleFeatureCollection previousFeatureCollection = null;
     Object min = null;
@@ -83,9 +82,6 @@ public class Collection_MinFunction extends FunctionExpressionImpl {
      * featureMember content.
      *
      * <p>To refer to all 'X': <code>featureMember/asterisk/X</code>
-     *
-     * @param args DOCUMENT ME!
-     * @throws IllegalArgumentException DOCUMENT ME!
      */
     public void setParameters(List args) {
         // if we see "featureMembers/*/ATTRIBUTE" change to "ATTRIBUTE"
@@ -100,7 +96,7 @@ public class Collection_MinFunction extends FunctionExpressionImpl {
 
     public Object evaluate(Object feature) {
         if (feature == null) {
-            return new Integer(0); // no features were visited in the making of this answer
+            return Integer.valueOf(0); // no features were visited in the making of this answer
         }
         Expression expr = (Expression) getExpression(0);
         SimpleFeatureCollection featureCollection = (SimpleFeatureCollection) feature;
