@@ -18,8 +18,8 @@ package org.geotools.styling;
 
 import java.util.logging.Logger;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.factory.GeoTools;
 import org.geotools.util.Utilities;
+import org.geotools.util.factory.GeoTools;
 import org.opengis.filter.FilterFactory;
 import org.opengis.filter.expression.Expression;
 import org.opengis.style.StyleVisitor;
@@ -30,13 +30,12 @@ import org.opengis.util.Cloneable;
  *
  * @author Ian Turton, CCG
  * @author Johann Sorel (Geomatys)
- * @source $URL$
  * @version $Id$
  */
 public class LinePlacementImpl implements LinePlacement, Cloneable {
     /** The logger for the default core module. */
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger("org.geotools.core");
+            org.geotools.util.logging.Logging.getLogger(LinePlacementImpl.class);
 
     private FilterFactory filterFactory;
 
@@ -197,9 +196,9 @@ public class LinePlacementImpl implements LinePlacement, Cloneable {
             result = (result * PRIME) + initialGap.hashCode();
         }
 
-        result = (result * PRIME) + new Boolean(generalized).hashCode();
-        result = (result * PRIME) + new Boolean(aligned).hashCode();
-        result = (result * PRIME) + new Boolean(repeated).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(generalized).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(aligned).hashCode();
+        result = (result * PRIME) + Boolean.valueOf(repeated).hashCode();
 
         return result;
     }
