@@ -29,7 +29,6 @@ import org.geotools.data.DataUtilities;
 import org.geotools.data.memory.MemoryDataStore;
 import org.geotools.data.simple.SimpleFeatureCollection;
 import org.geotools.factory.CommonFactoryFinder;
-import org.geotools.feature.IllegalAttributeException;
 import org.geotools.feature.SchemaException;
 import org.geotools.feature.simple.SimpleFeatureBuilder;
 import org.geotools.feature.simple.SimpleFeatureTypeBuilder;
@@ -47,7 +46,6 @@ import org.geotools.styling.LineSymbolizer;
 import org.geotools.styling.PointSymbolizer;
 import org.geotools.styling.PolygonSymbolizer;
 import org.geotools.styling.Rule;
-import org.geotools.styling.SLDParser;
 import org.geotools.styling.Stroke;
 import org.geotools.styling.Style;
 import org.geotools.styling.StyleBuilder;
@@ -57,6 +55,7 @@ import org.geotools.styling.StyledLayerDescriptor;
 import org.geotools.styling.Symbolizer;
 import org.geotools.styling.UserLayer;
 import org.geotools.test.TestData;
+import org.geotools.xml.styling.SLDParser;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Envelope;
 import org.locationtech.jts.geom.Geometry;
@@ -70,21 +69,19 @@ import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
 import org.locationtech.jts.geom.TopologyException;
 import org.locationtech.jts.geom.impl.PackedCoordinateSequenceFactory;
+import org.opengis.feature.IllegalAttributeException;
 import org.opengis.feature.simple.SimpleFeature;
 import org.opengis.feature.simple.SimpleFeatureType;
 import org.opengis.filter.FilterFactory;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 import org.opengis.referencing.operation.MathTransform;
 
-/**
- * @author jamesm
- * @source $URL$
- */
+/** @author jamesm */
 public class Rendering2DTest extends TestCase {
 
     /** The logger for the rendering module. */
     private static final Logger LOGGER =
-            org.geotools.util.logging.Logging.getLogger("org.geotools.rendering");
+            org.geotools.util.logging.Logging.getLogger(Rendering2DTest.class);
 
     private final int xCenter = -74;
 
@@ -105,7 +102,7 @@ public class Rendering2DTest extends TestCase {
     protected static final FilterFactory filterFactory = CommonFactoryFinder.getFilterFactory(null);
 
     {
-        rendererHints.put("optimizedDataLoadingEnabled", new Boolean(true));
+        rendererHints.put("optimizedDataLoadingEnabled", Boolean.valueOf(true));
     }
 
     public Rendering2DTest(java.lang.String testName) {
@@ -172,7 +169,7 @@ public class Rendering2DTest extends TestCase {
         LineSymbolizer linesym = sFac.createLineSymbolizer();
         Stroke myStroke = sFac.getDefaultStroke();
         myStroke.setColor(filterFactory.literal("#0000ff"));
-        myStroke.setWidth(filterFactory.literal(new Integer(5)));
+        myStroke.setWidth(filterFactory.literal(Integer.valueOf(5)));
         LOGGER.fine("got new Stroke " + myStroke);
         linesym.setStroke(myStroke);
         return linesym;
@@ -186,7 +183,7 @@ public class Rendering2DTest extends TestCase {
         polysym.setFill(myFill);
         myStroke = sFac.getDefaultStroke();
         myStroke.setColor(filterFactory.literal("#0000ff"));
-        myStroke.setWidth(filterFactory.literal(new Integer(2)));
+        myStroke.setWidth(filterFactory.literal(Integer.valueOf(2)));
         polysym.setStroke(myStroke);
         return polysym;
     }
@@ -199,7 +196,7 @@ public class Rendering2DTest extends TestCase {
         polysym.setFill(myFill);
         myStroke = sFac.getDefaultStroke();
         myStroke.setColor(filterFactory.literal("#00ff00"));
-        myStroke.setWidth(filterFactory.literal(new Integer(2)));
+        myStroke.setWidth(filterFactory.literal(Integer.valueOf(2)));
         polysym.setStroke(myStroke);
         return polysym;
     }
@@ -909,7 +906,7 @@ public class Rendering2DTest extends TestCase {
 
         Stroke myStroke = sFac.getDefaultStroke();
         myStroke.setColor(filterFactory.literal("#0000ff"));
-        myStroke.setWidth(filterFactory.literal(new Integer(3)));
+        myStroke.setWidth(filterFactory.literal(Integer.valueOf(3)));
         LOGGER.info("got new Stroke " + myStroke);
         linesym.setStroke(myStroke);
 
@@ -1176,7 +1173,8 @@ public class Rendering2DTest extends TestCase {
                     public void featureRenderer(SimpleFeature feature) {}
 
                     public void errorOccurred(Exception e) {
-                        e.printStackTrace();
+                        java.util.logging.Logger.getGlobal()
+                                .log(java.util.logging.Level.INFO, "", e);
                         fail(
                                 "Got an exception during rendering, this should not happen, "
                                         + "not even with emtpy geometries");
