@@ -26,16 +26,16 @@ import javax.sql.DataSource;
 import net.sourceforge.groboutils.junit.v1.MultiThreadedTestRunner;
 import net.sourceforge.groboutils.junit.v1.TestRunnable;
 import org.apache.commons.dbcp.BasicDataSource;
-import org.geotools.factory.Hints;
 import org.geotools.geometry.DirectPosition2D;
 import org.geotools.referencing.CRS;
+import org.geotools.referencing.factory.epsg.oracle.OracleDialectEpsgMediator;
 import org.geotools.referencing.factory.epsg.oracle.OracleOnlineTestCase;
+import org.geotools.util.factory.Hints;
 import org.opengis.geometry.DirectPosition;
 import org.opengis.referencing.FactoryException;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
 import org.opengis.referencing.operation.MathTransform;
 
-/** @source $URL$ */
 public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleOnlineTestCase {
 
     static final int RUNNER_COUNT = 2;
@@ -83,7 +83,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
 
         wrappedDS = (BasicDataSource) datasource;
         hints = new Hints(Hints.CACHE_POLICY, "none");
-        hints.put(Hints.AUTHORITY_MAX_ACTIVE, new Integer(MAX_WORKERS));
+        hints.put(Hints.AUTHORITY_MAX_ACTIVE, Integer.valueOf(MAX_WORKERS));
 
         mediator = new OracleDialectEpsgMediator(80, hints, datasource);
         codes = getCodes();
@@ -135,7 +135,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
             System.out.println("Overall Time: " + timeElapsed);
             System.out.println(
                     "Throughput: "
-                            + (1000 * totalRuns / new Long(totalTime).doubleValue())
+                            + (1000 * totalRuns / Long.valueOf(totalTime).doubleValue())
                             + " Hz");
             System.out.println("Min: " + minTime);
             System.out.println("Max: " + maxTime);
@@ -157,7 +157,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
             sb.append(", ");
             sb.append(totalRuns);
             sb.append(", ");
-            sb.append((1000 * totalRuns / new Long(totalTime).doubleValue()));
+            sb.append((1000 * totalRuns / Long.valueOf(totalTime).doubleValue()));
             sb.append(", ");
             sb.append(minTime);
             sb.append(", ");
@@ -398,7 +398,7 @@ public class OracleDialectEpsgMediatorStarvationOnlineStressTest extends OracleO
                     }
                 } catch (Exception e) {
                     exceptions++;
-                    System.out.println("Exception in Thread " + id + ", EPSG: " + code2);
+                    // System.out.println("Exception in Thread " + id + ", EPSG: " + code2);
                     // TODO: save exception
                     // e.printStackTrace();
                 }
